# GuardRail-Studio

./: .gitignore  .secrets.baseline  PROJECT_STRUCTURE.md  README.md  design_guidelines.json  pyproject.toml
.emergent/: emergent.yml
.github/workflows/: ci.yml  ci_cd.yaml
backend/: Readme.md  guardrail_studio.db  requirements.txt  server.py
backend/src/analytics/: drift_detector.py
backend/src/api/: dependencies.py
backend/src/api/routes/: firewall.py  health.py  telemetry.py
backend/src/core/: config.py  exceptions.py  logging.py  secrets.py
backend/src/db/: postgres.py  production_manager.py  qdrant.py
backend/src/db/migrations/: 001_initial_schema.sql
backend/src/repositories/: telemetry_repo.py
backend/src/schemas/: firewall.py  telemetry.py
backend/src/services/: cache_service.py  guardrail_service.py  inference_client.py  inference_client_triton.py  kafka_producer.py  triton_channel_pool.py
backend/src/services/policies/: __init__.py  regex_policy.py  registry.py  triton_policy.py
backend/tests/: __init__.py  conftest.py  test_firewall.py  test_health.py  test_telemetry.py
deploy/airflow/dags/: drift_retrain_dag.py
deploy/k8s/: README.md  production-stack.yaml
deploy/k8s/istio_flagger/: README.md  canary-triton.yaml
deploy/terraform/: main.tf  variables.tf
deploy/terraform/modules/eks/: main.tf
deploy/terraform/modules/networking/: main.tf
deploy/terraform/modules/rds/: main.tf
deploy/triton/: README.md
deploy/triton/model_repository/guardrail_model/: config.pbtxt
docs/: CONTRIBUTING.md  PHILOSOPHY.md  SECURITY.md  SETUP_AND_OPERATIONS.md  SYSTEM_DESIGN.md  USER_GUIDE_AND_UI.md
docs/phase_log/: PHASE2_DOCUMENTATION.md  PHASE3_PHASE4_DOCUMENTATION.md  PHASE5_DOCUMENTATION.md
frontend/src/: App.css  App.js
frontend/src/components/: Dashboard.jsx  LatencyChart.jsx  MetricsCard.jsx  RequestLog.jsx  SystemStatus.jsx  TestPanel.jsx  ThreatAnalytics.jsx
memory/: PRD.md
ml_pipelines/: continuous_finetuning.py  export_model.py
tests/load_testing/: k6_chaos_test.js
